# cg

./: CMakeLists.txt
src/: main.cpp
src/chapter_2/: exercise_2_12.cpp  exercise_2_13.cpp  exercise_2_14.cpp  exercise_2_17.cpp  exercise_2_20.cpp  exercise_2_22.cpp  exercise_2_25.cpp  exercise_2_27.cpp  exercise_2_28.cpp  exercise_2_29.cpp  exercise_2_30.cpp  exercise_2_31.cpp  exercise_2_32.cpp  exercise_2_33.cpp  exercise_2_34.cpp  exercise_2_36.cpp  exercise_2_38.cpp  experiment_2_1.cpp  experiment_2_14.cpp  experiment_2_17.cpp  experiment_2_18.cpp  experiment_2_19.cpp  experiment_2_2.cpp  experiment_2_24.cpp  experiment_2_5.cpp  experiment_2_7.cpp  experiment_2_9.cpp
src/chapter_3/: exercise_3_1.cpp  exercise_3_2.cpp  exercise_3_4.cpp
src/core/: app.cpp  experiment.cpp  helper.cpp  shape.cpp  switcher.cpp
src/core/camera/: RotationUtil.cpp
src/own/: own_1.cpp
